ported over changes

--- a/content/example.mdx
+++ b/content/example.mdx
@@ -80,6 +80,6 @@ As urban populations grow and technology evolves, the future of urban farming pr
 
 <br/>
 
-<h3 class="text-center text-2xl font-semibold">Join the Tech-Driven Urban Farming Movement</h3>
+<h3 className="text-center text-2xl font-semibold">Join the Tech-Driven Urban Farming Movement</h3>
 
-<p class="text-center text-lg">Stay updated on the latest innovations in smart agriculture and discover how technology is reshaping our cities into sustainable, high-tech green spaces.</p>
+<p className="text-center text-lg">Stay updated on the latest innovations in smart agriculture and discover how technology is reshaping our cities into sustainable, high-tech green spaces.</p>
